--- a/css/contact.css
+++ b/css/contact.css
@@ -25,6 +25,7 @@ hr{
 margin-left: 6vw;
 }
 
+@media screen and (min-width: 767px) {
 #text1{
   margin-left: 3vw;
   margin-top: 3vh;
@@ -55,6 +56,7 @@ margin-left: 6vw;
   margin-top: 5vw;
   text-align: left;
   float: left;
+}
 }
 
 #bold{
